# Mirror

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  connector_request.yml
.github/workflows/: ci.yml
config/: mirror.config.example.yaml
docs/: TROUBLESHOOTING.md  TUTORIAL.md
examples/: sample_messages.jsonl
scripts/: status.py
scripts/connectors/: discord_parse.py  gmail_mbox_parse.py  imessage_extract.py  instagram_parse.py  slack_parse.py  sms_xml_parse.py  telegram_parse.py  whatsapp_parse.py
scripts/eval/: style_eval.py
scripts/format/: build_dataset.py  normalize.py  pii_scrub.py
scripts/lib/: schema.py  style_metrics.py
scripts/maintenance/: purge.py
scripts/persona/: style_analyze.py
scripts/serve/: mirror_chat.py  mirror_server.py
scripts/train/: lora_export.py  lora_train.py  openai_finetune.py
skills/mirror/: SKILL.md
skills/mirror-connectors/: SKILL.md
skills/mirror-connectors/references/: gmail.md  imessage.md  slack-discord.md  sms-signal-instagram.md  telegram.md  whatsapp.md
skills/mirror-data-formatting/: SKILL.md
skills/mirror-deploy/: SKILL.md
skills/mirror-evaluation/: SKILL.md
skills/mirror-interview/: SKILL.md
skills/mirror-model-selection/: SKILL.md
skills/mirror-model-selection/references/: data-volume-and-epochs.md  model-matrix.md  training-approaches.md
skills/mirror-persona-analysis/: SKILL.md
skills/mirror-training/: SKILL.md
skills/mirror-training/references/: path-a-claude-prompt-rag.md  path-b-openai-finetune.md  path-c-opensource-lora.md
tests/: test_connectors.py  test_pipeline.py
